tests/ui/toplevel_ref_arg.stderr
error: `ref` directly on a function argument is ignored. Consider using a reference type instead.
 --> $DIR/toplevel_ref_arg.rs:7:15
  |
7 | fn the_answer(ref mut x: u8) {
  |               ^^^^^^^^^
  |
  = note: #[deny(toplevel_ref_arg)] implied by #[deny(clippy)]
note: lint level defined here
 --> $DIR/toplevel_ref_arg.rs:4:9
  |
4 | #![deny(clippy)]
  |         ^^^^^^

error: `ref` on an entire `let` pattern is discouraged, take a reference with `&` instead
  --> $DIR/toplevel_ref_arg.rs:18:7
   |
18 |   let ref x = 1;
   |   ----^^^^^----- help: try `let x = &1;`
   |
   = note: #[deny(toplevel_ref_arg)] implied by #[deny(clippy)]

error: `ref` on an entire `let` pattern is discouraged, take a reference with `&` instead
  --> $DIR/toplevel_ref_arg.rs:20:7
   |
20 |   let ref y: (&_, u8) = (&1, 2);
   |   ----^^^^^--------------------- help: try `let y: &(&_, u8) = &(&1, 2);`
   |
   = note: #[deny(toplevel_ref_arg)] implied by #[deny(clippy)]

error: `ref` on an entire `let` pattern is discouraged, take a reference with `&` instead
  --> $DIR/toplevel_ref_arg.rs:22:7
   |
22 |   let ref z = 1 + 2;
   |   ----^^^^^--------- help: try `let z = &(1 + 2);`
   |
   = note: #[deny(toplevel_ref_arg)] implied by #[deny(clippy)]

error: `ref` on an entire `let` pattern is discouraged, take a reference with `&` instead
  --> $DIR/toplevel_ref_arg.rs:24:7
   |
24 |   let ref mut z = 1 + 2;
   |   ----^^^^^^^^^--------- help: try `let z = &mut (1 + 2);`
   |
   = note: #[deny(toplevel_ref_arg)] implied by #[deny(clippy)]

error: aborting due to 5 previous errors

